fix: <img> overflow in cards

--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ figure img{
 	height: 100%;
 	width: 100%;
 	object-fit: cover;
+	overflow: hidden;
 	transition: 0.5s;
 }
 figcaption{
@@ -257,9 +258,6 @@ figcaption p+i{
 .search-results figure{
 	grid-template-rows: 50% 1fr;
 }
-.search-results img{
-	aspect-ratio: 16/9;
-}
 .search-results figcaption{
 	display: flex;
 	flex-direction: column;
@@ -275,9 +273,6 @@ figcaption p+i{
 }
 .popular-results figure{
 	grid-template-columns: 1fr 2fr;
-}
-.popular-results img{
-	aspect-ratio: 16/9;
 }
 #activities{
 	flex-basis: 100%;
